# pbinfo-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
src/: args.rs  config.rs  display.rs  lib.rs  login.rs  main.rs  parse.rs  solution.rs  user_config.rs
src/api/: login.rs  mod.rs  score.rs  solve.rs  upload.rs
