[package]
name = "pbinfo-cli"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
colored = "2.1.0"
directories = "5.0.1"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.11.24", features = ["multipart","cookies"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
