[package]
name = "pbinfo-cli"
version = "1.0.0"
edition = "2021"
description = "A cli tool for uploading solutions to pbinfo.ro"
license = "GPL2"
authors = ["https://github.com/insertokername/"]

[dependencies]
pbinfo-api = { git = "https://github.com/insertokname/pbinfo-api" }
clap = { version = "4.5.1", features = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.15", features = ["multipart","cookies"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "2.0.12"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.10"
